--- a/src/Component/Cart/Cart.css
+++ b/src/Component/Cart/Cart.css
@@ -17,7 +17,7 @@ h4{
 
 .clearCart{
     height: 48px;
-    width: 232px;
+    width: 100%;
     background-color: #FF3030;
     border-radius: 8px;
 }
@@ -29,7 +29,7 @@ h4{
 .reviewOrder{
     margin-top: 10px;
     height: 48px;
-    width: 232px;
+    width: 100%;
     border-radius: 8px;
     background-color: #FF9900;
 }
