--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -37,3 +37,11 @@
     pointer-events: inherit;
 }
 
+.navbar-nav a{
+    color: #ffffff;
+}
+
+
+.navbar-nav a:hover{
+    color: rgb(248, 229, 123);
+}
