--- a/src/Component/Product/Product.css
+++ b/src/Component/Product/Product.css
@@ -2,25 +2,31 @@
     border: 1px solid #95A0A7;
     border-radius: 8px;
     margin: 20px;
-    height: 610px;
-    width: 300px;
-    float: left;
+    height: 550px;
+    width: 100%;
     position: relative;
 }
+
 
 .productImage {
     border-radius: 8px;
     height: 286px;
-    width: 286px;
+    width: 100%;
     padding: 8px;
 }
 
+
+
 .item h6 {
-    font-size: 21px;
+    min-height: 4rem;
+    font-size: 1.2rem;
     padding: 8px;
     margin: 0px;
-    font-weight: 400 !important;
+    color: #E91E63;
+    font-weight: 500 !important;
 }
+
+
 
 .item h5 {
     padding: 8px;
@@ -34,7 +40,7 @@
     bottom: 0px;
     background-color: #FFE0B3;
     height: 48px;
-    width: 300px;
+    width: 100%;
     border-color: #95A0A7;
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
@@ -50,10 +56,14 @@
 
 .seller{
     padding: 8px;
-    margin-top: 40px;
 }
 
 .rating{
     padding: 8px;
-    margin-top: 10px;
+}
+
+.priceTitle{
+    text-transform: capitalize;
+    color: blue;
+    font-weight: 500 !important;
 }
